--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bfece7">  <td>21/09/27 13:51:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC007.stores()[pri:0, instance:Test.TC007@2ea6e30c]">stores</td> 
+<tr bgcolor="bfece7">  <td>21/09/30 08:37:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001.login(java.lang.String, java.lang.String)[pri:0, instance:Test.TC001@2ea6e30c]">login</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="8cd97f">  <td>21/09/27 13:51:35</td>   <td>6841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC008.woodenSofa()[pri:0, instance:Test.TC008@6138e79a]">woodenSofa</td> 
+<tr bgcolor="bfece7">  <td>21/09/30 08:37:27</td>   <td>15089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001.login(java.lang.String, java.lang.String)[pri:0, instance:Test.TC001@2ea6e30c]">login</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="9f7194">  <td>21/09/27 13:51:45</td>   <td>16969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005.doublebed()[pri:0, instance:Test.TC005@2dcd168a]">doublebed</td> 
+<tr bgcolor="8cd97f">  <td>21/09/30 08:37:42</td>   <td>30234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002.wishlist()[pri:0, instance:Test.TC002@6138e79a]">wishlist</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="68efa0">  <td>21/09/27 13:51:59</td>   <td>31224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC006.gamingChair()[pri:0, instance:Test.TC006@388526fb]">gamingChair</td> 
+<tr bgcolor="9f7194">  <td>21/09/30 08:38:01</td>   <td>48759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.addtocart()[pri:0, instance:Test.TC003@2dcd168a]">addtocart</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="6abc94">  <td>21/09/27 13:52:06</td>   <td>37916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC003.addtocart()[pri:0, instance:Test.TC003@21a21c64]">addtocart</td> 
+<tr bgcolor="68efa0">  <td>21/09/30 08:38:20</td>   <td>67536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004.bookshelf()[pri:0, instance:Test.TC004@388526fb]">bookshelf</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="c072cb">  <td>21/09/27 13:52:22</td>   <td>53958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC004.bookshelf()[pri:0, instance:Test.TC004@7803bfd]">bookshelf</td> 
+<tr bgcolor="6abc94">  <td>21/09/30 08:38:31</td>   <td>78899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC005.doublebed()[pri:0, instance:Test.TC005@21a21c64]">doublebed</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="7c7bf6">  <td>21/09/27 13:52:33</td>   <td>64595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001.login(java.lang.String, java.lang.String)[pri:0, instance:Test.TC001@42bc14c1]">login</td> 
+<tr bgcolor="c072cb">  <td>21/09/30 08:38:44</td>   <td>92248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC006.gamingChair()[pri:0, instance:Test.TC006@7803bfd]">gamingChair</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="7c7bf6">  <td>21/09/27 13:52:47</td>   <td>79126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001.login(java.lang.String, java.lang.String)[pri:0, instance:Test.TC001@42bc14c1]">login</td> 
+<tr bgcolor="7c7bf6">  <td>21/09/30 08:38:51</td>   <td>98858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC007.stores()[pri:0, instance:Test.TC007@42bc14c1]">stores</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>21/09/27 13:53:01</td>   <td>93222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002.wishlist()[pri:0, instance:Test.TC002@531f4093]">wishlist</td> 
+<tr bgcolor="b485ba">  <td>21/09/30 08:38:57</td>   <td>104519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC008.woodenSofa()[pri:0, instance:Test.TC008@531f4093]">woodenSofa</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="b46384">  <td>21/09/27 13:53:20</td>   <td>112327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC010.kidsbookShelf()[pri:0, instance:Test.TC010@62ef27a8]">kidsbookShelf</td> 
+<tr bgcolor="b46384">  <td>21/09/30 08:39:10</td>   <td>117774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC009.navigate()[pri:0, instance:Test.TC009@62ef27a8]">navigate</td> 
   <td>main@1301987508</td>   <td></td> </tr>
-<tr bgcolor="746a6f">  <td>21/09/27 13:53:28</td>   <td>119920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC009.navigate()[pri:0, instance:Test.TC009@6436a7db]">navigate</td> 
+<tr bgcolor="746a6f">  <td>21/09/30 08:39:19</td>   <td>127009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC010.kidsbookShelf()[pri:0, instance:Test.TC010@6436a7db]">kidsbookShelf</td> 
   <td>main@1301987508</td>   <td></td> </tr>
 </table>
